--- a/Cadres/app/src/main/res/layout/activity_home.xml
+++ b/Cadres/app/src/main/res/layout/activity_home.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_40"
-        android:text="宁乡市干部大数据系统"
+        android:text="浏阳市干部大数据系统"
         android:textSize="@dimen/sp_28"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -261,14 +261,14 @@
 
     </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="@dimen/sp_12"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="@dimen/dp_5"
-        android:text="技术支持：宁乡市数据资源中心"/>
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        android:textSize="@dimen/sp_12"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        android:layout_marginBottom="@dimen/dp_5"-->
+<!--        android:text="技术支持：浏阳市数据资源中心"/>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
