干部添加事业干部， 列表中加入在职专业（字段：currentMajor）、配偶姓名（字段：spouseName）、配偶工作单位及职务（字段：spouseWorkUnit）

--- a/Cadres/app/src/main/res/layout/layout_gb_list_title_ldgb.xml
+++ b/Cadres/app/src/main/res/layout/layout_gb_list_title_ldgb.xml
@@ -212,45 +212,84 @@
 
         <TextView
             android:id="@+id/tv_qrzwhcd"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/dp_120"
             android:layout_height="0dp"
             android:textSize="@dimen/sp_12"
             android:gravity="center"
             android:paddingStart="@dimen/dp_5"
             android:paddingEnd="@dimen/dp_5"
             app:layout_constraintStart_toEndOf="@+id/ll_csny_ldgb"
-            app:layout_constraintEnd_toStartOf="@+id/tv_qrzzy"
             app:layout_constraintTop_toTopOf="@+id/view_title"
             app:layout_constraintBottom_toBottomOf="@+id/view_title"
             android:text="全日制\n文化程度"/>
 
         <TextView
             android:id="@+id/tv_qrzzy"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/dp_120"
             android:layout_height="0dp"
             android:textSize="@dimen/sp_12"
             android:gravity="center"
             android:paddingStart="@dimen/dp_5"
             android:paddingEnd="@dimen/dp_5"
             app:layout_constraintStart_toEndOf="@+id/tv_qrzwhcd"
-            app:layout_constraintEnd_toStartOf="@+id/tv_zzwhcd"
             app:layout_constraintTop_toTopOf="@+id/view_title"
             app:layout_constraintBottom_toBottomOf="@+id/view_title"
             android:text="全日制\n专业"/>
 
         <TextView
             android:id="@+id/tv_zzwhcd"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/dp_120"
             android:layout_height="0dp"
             android:textSize="@dimen/sp_12"
             android:gravity="center"
             android:paddingStart="@dimen/dp_5"
             android:paddingEnd="@dimen/dp_5"
             app:layout_constraintStart_toEndOf="@+id/tv_qrzzy"
-            app:layout_constraintEnd_toEndOf="@+id/view_title"
             app:layout_constraintTop_toTopOf="@+id/view_title"
             app:layout_constraintBottom_toBottomOf="@+id/view_title"
             android:text="在职\n文化程度"/>
+
+        <TextView
+            android:id="@+id/tv_zzzy"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:textSize="@dimen/sp_12"
+            android:gravity="center"
+            android:paddingStart="@dimen/dp_5"
+            android:paddingEnd="@dimen/dp_5"
+            app:layout_constraintStart_toEndOf="@+id/tv_zzwhcd"
+            app:layout_constraintEnd_toStartOf="@+id/tv_poxm"
+            app:layout_constraintTop_toTopOf="@+id/view_title"
+            app:layout_constraintBottom_toBottomOf="@+id/view_title"
+            android:text="在职专业"/>
+
+        <TextView
+            android:id="@+id/tv_poxm"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:textSize="@dimen/sp_12"
+            android:gravity="center"
+            android:paddingStart="@dimen/dp_5"
+            android:paddingEnd="@dimen/dp_5"
+            app:layout_constraintStart_toEndOf="@+id/tv_zzzy"
+            app:layout_constraintEnd_toStartOf="@+id/tv_pogzdw"
+            app:layout_constraintTop_toTopOf="@+id/view_title"
+            app:layout_constraintBottom_toBottomOf="@+id/view_title"
+            android:text="配偶姓名"/>
+
+        <TextView
+            android:id="@+id/tv_pogzdw"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:textSize="@dimen/sp_12"
+            android:gravity="center"
+            android:paddingStart="@dimen/dp_5"
+            android:paddingEnd="@dimen/dp_5"
+            app:layout_constraintStart_toEndOf="@+id/tv_poxm"
+            app:layout_constraintEnd_toEndOf="@+id/view_title"
+            app:layout_constraintTop_toTopOf="@+id/view_title"
+            app:layout_constraintBottom_toBottomOf="@+id/view_title"
+            android:text="配偶工作单位\n及职务"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
