--- a/Cadres/app/src/main/res/layout/activity_gb_drawer_right_info2.xml
+++ b/Cadres/app/src/main/res/layout/activity_gb_drawer_right_info2.xml
@@ -451,10 +451,46 @@
         android:layout_height="0dp"/>
 
     <View
-        android:id="@+id/view_jtzz"
+        android:id="@+id/view_fwqssj"
         android:layout_width="0dp"
         android:layout_height="@dimen/dp_60"
         app:layout_constraintTop_toBottomOf="@+id/view_rylb"
+        app:layout_constraintStart_toStartOf="@+id/view_left"
+        app:layout_constraintEnd_toEndOf="@+id/view_left"/>
+
+    <TextView
+        android:id="@+id/tv_fwqssj_title"
+        android:layout_width="@dimen/dp_80"
+        app:layout_constraintTop_toTopOf="@+id/view_fwqssj"
+        app:layout_constraintBottom_toBottomOf="@+id/view_fwqssj"
+        android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
+        android:text="服务起算\n时间"
+        android:textSize="@dimen/sp_12"
+        android:background="@color/color_fdf5ed"
+        app:layout_constraintStart_toStartOf="@+id/view_fwqssj"
+        android:layout_height="0dp"/>
+
+    <TextView
+        android:id="@+id/tv_fwqssj"
+        android:layout_width="0dp"
+        app:layout_constraintTop_toTopOf="@+id/view_fwqssj"
+        app:layout_constraintEnd_toEndOf="@+id/view_fwqssj"
+        app:layout_constraintBottom_toBottomOf="@+id/view_fwqssj"
+        android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
+        tools:text="服务起算\n时间"
+        android:textSize="@dimen/sp_12"
+        app:layout_constraintStart_toEndOf="@+id/tv_fwqssj_title"
+        android:layout_height="0dp"/>
+
+    <View
+        android:id="@+id/view_jtzz"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_60"
+        app:layout_constraintTop_toBottomOf="@+id/view_fwqssj"
         app:layout_constraintStart_toStartOf="@+id/view_left"
         app:layout_constraintEnd_toEndOf="@+id/view_center"/>
 
@@ -743,6 +779,42 @@
         tools:text="管理类别"
         android:textSize="@dimen/sp_12"
         app:layout_constraintStart_toEndOf="@+id/tv_sex_title"
+        android:layout_height="0dp"/>
+
+    <View
+        android:id="@+id/view_fwnx"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_60"
+        app:layout_constraintTop_toBottomOf="@+id/view_gllb"
+        app:layout_constraintStart_toStartOf="@+id/view_center"
+        app:layout_constraintEnd_toEndOf="@+id/view_center"/>
+
+    <TextView
+        android:id="@+id/tv_fwnx_title"
+        android:layout_width="@dimen/dp_80"
+        app:layout_constraintTop_toTopOf="@+id/view_fwnx"
+        app:layout_constraintBottom_toBottomOf="@+id/view_fwnx"
+        android:gravity="center"
+        android:text="服务年限"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
+        android:textSize="@dimen/sp_12"
+        android:background="@color/color_fdf5ed"
+        app:layout_constraintStart_toStartOf="@+id/view_fwnx"
+        android:layout_height="0dp"/>
+
+    <TextView
+        android:id="@+id/tv_fwnx"
+        android:layout_width="0dp"
+        app:layout_constraintTop_toTopOf="@+id/view_fwnx"
+        app:layout_constraintEnd_toEndOf="@+id/view_fwnx"
+        app:layout_constraintBottom_toBottomOf="@+id/view_fwnx"
+        android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
+        tools:text="服务年限"
+        android:textSize="@dimen/sp_12"
+        app:layout_constraintStart_toEndOf="@+id/tv_fwnx_title"
         android:layout_height="0dp"/>
 
 <!--    第四列-->
@@ -1115,9 +1187,9 @@
         android:id="@+id/view_bz"
         android:layout_width="0dp"
         android:layout_height="@dimen/dp_60"
-        app:layout_constraintTop_toBottomOf="@+id/view_zwlb"
+        app:layout_constraintTop_toBottomOf="@+id/view_lx"
         app:layout_constraintStart_toStartOf="@+id/view_right"
-        app:layout_constraintEnd_toEndOf="@+id/view_right"/>
+        app:layout_constraintEnd_toEndOf="@+id/view_end"/>
 
     <TextView
         android:id="@+id/tv_bz_title"
@@ -1247,8 +1319,8 @@
         android:id="@+id/view_lx"
         android:layout_width="0dp"
         android:layout_height="@dimen/dp_60"
-        app:layout_constraintTop_toBottomOf="@+id/view_rxzjqssj"
-        app:layout_constraintStart_toStartOf="@+id/view_end"
+        app:layout_constraintTop_toBottomOf="@+id/view_zwlb"
+        app:layout_constraintStart_toStartOf="@+id/view_right"
         app:layout_constraintEnd_toEndOf="@+id/view_end"/>
 
     <TextView
@@ -1310,7 +1382,7 @@
         app:layout_constraintStart_toStartOf="@+id/view_sex"
         app:layout_constraintTop_toTopOf="@+id/view_xlxw"
         android:background="@color/color_ffd7b4"
-        app:layout_constraintBottom_toBottomOf="@+id/view_gllb"/>
+        app:layout_constraintBottom_toBottomOf="@+id/view_fwqssj"/>
 
     <View
         android:layout_width="@dimen/dp_1"
@@ -1326,7 +1398,7 @@
         app:layout_constraintStart_toStartOf="@+id/tv_rxzsj"
         app:layout_constraintTop_toTopOf="@+id/view_rxzsj"
         android:background="@color/color_ffd7b4"
-        app:layout_constraintBottom_toBottomOf="@+id/view_gllb"/>
+        app:layout_constraintBottom_toBottomOf="@+id/view_fwnx"/>
 
     <View
         android:layout_width="@dimen/dp_1"
@@ -1358,7 +1430,7 @@
         app:layout_constraintStart_toStartOf="@+id/view_head"
         app:layout_constraintTop_toTopOf="@+id/view_rxzjsj"
         android:background="@color/color_ffd7b4"
-        app:layout_constraintBottom_toBottomOf="@+id/view_jtzz"/>
+        app:layout_constraintBottom_toBottomOf="@+id/view_rxzjqssj"/>
 
     <View
         android:layout_width="@dimen/dp_1"
@@ -1366,7 +1438,7 @@
         app:layout_constraintStart_toStartOf="@+id/tv_rxzjsj"
         app:layout_constraintTop_toTopOf="@+id/view_rxzjsj"
         android:background="@color/color_ffd7b4"
-        app:layout_constraintBottom_toBottomOf="@+id/view_jtzz"/>
+        app:layout_constraintBottom_toBottomOf="@+id/view_rxzjqssj"/>
 
     <View
         android:layout_width="@dimen/dp_1"
@@ -1454,6 +1526,14 @@
         android:layout_width="0dp"
         android:layout_height="@dimen/dp_1"
         app:layout_constraintTop_toTopOf="@+id/view_rylb"
+        app:layout_constraintStart_toStartOf="@+id/view_name"
+        app:layout_constraintEnd_toEndOf="@+id/view_head"
+        android:background="@color/color_ffd7b4"/>
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_1"
+        app:layout_constraintTop_toTopOf="@+id/view_fwqssj"
         app:layout_constraintStart_toStartOf="@+id/view_name"
         app:layout_constraintEnd_toEndOf="@+id/view_head"
         android:background="@color/color_ffd7b4"/>
