--- a/Cadres/app/src/main/res/layout/activity_bm2.xml
+++ b/Cadres/app/src/main/res/layout/activity_bm2.xml
@@ -63,6 +63,20 @@
             android:paddingEnd="@dimen/dp_15"
             android:text="单位性质" />
 
+        <TextView
+            android:id="@+id/tv_screen_cpkq"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dp_40"
+            android:layout_marginStart="@dimen/dp_20"
+            android:background="@drawable/shape_db1b21_fce8e6_r40"
+            android:drawableRight="@mipmap/ic_down"
+            android:entries="@array/zcfg_array"
+            android:gravity="center_vertical"
+            android:minWidth="@dimen/dp_160"
+            android:paddingStart="@dimen/dp_20"
+            android:paddingEnd="@dimen/dp_15"
+            android:text="超配空缺筛选" />
+
     </LinearLayout>
 
 
@@ -666,6 +680,14 @@
                         tools:text="(40)"/>
 
                 </LinearLayout>
+
+                <View
+                    android:layout_width="@dimen/dp_1"
+                    android:layout_height="0dp"
+                    app:layout_constraintTop_toTopOf="@+id/view_kqqk"
+                    app:layout_constraintEnd_toEndOf="@+id/view_kqqk"
+                    app:layout_constraintBottom_toBottomOf="@+id/view_kqqk"
+                    android:background="@color/color_ffd7b4"/>
 
                 <View
                     android:layout_width="0dp"
