--- a/Cadres/app/src/main/res/layout/activity_bm_gwy.xml
+++ b/Cadres/app/src/main/res/layout/activity_bm_gwy.xml
@@ -135,6 +135,20 @@
             android:paddingEnd="@dimen/dp_15"
             android:text="单位类别" />
 
+        <TextView
+            android:id="@+id/tv_screen_cpkq"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dp_40"
+            android:layout_marginStart="@dimen/dp_20"
+            android:background="@drawable/shape_db1b21_fce8e6_r40"
+            android:drawableRight="@mipmap/ic_down"
+            android:entries="@array/zcfg_array"
+            android:gravity="center_vertical"
+            android:minWidth="@dimen/dp_160"
+            android:paddingStart="@dimen/dp_20"
+            android:paddingEnd="@dimen/dp_15"
+            android:text="超配空缺筛选" />
+
     </LinearLayout>
 
 
