--- a/Cadres/app/src/main/res/layout/activity_gb_select.xml
+++ b/Cadres/app/src/main/res/layout/activity_gb_select.xml
@@ -1,147 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <View
-        android:id="@+id/view_center"
-        android:layout_width="@dimen/dp_1"
-        android:layout_height="@dimen/dp_1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/iv_ldgb_bg"
         android:layout_width="@dimen/dp_280"
         android:layout_height="@dimen/dp_180"
-        app:layout_constraintEnd_toEndOf="@+id/view_center"
+        android:layout_marginTop="@dimen/dp_50"
         android:layout_marginEnd="@dimen/dp_100"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="@dimen/dp_100"
-        android:background="@mipmap/ic_yjjc_bw_bg"/>
+        android:background="@mipmap/ic_yjjc_bw_bg"
+        app:layout_constraintEnd_toEndOf="@+id/view_center"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/iv_ldgb"
         android:layout_width="@dimen/dp_80"
+        android:layout_height="@dimen/dp_80"
         android:src="@mipmap/ic_gb_ldgb"
         app:layout_constraintBottom_toTopOf="@+id/tv_ldgb"
-        app:layout_constraintStart_toStartOf="@+id/iv_ldgb_bg"
         app:layout_constraintEnd_toEndOf="@+id/iv_ldgb_bg"
-        app:layout_constraintTop_toTopOf="@+id/iv_ldgb_bg"
-        android:layout_height="@dimen/dp_80"/>
-
-    <TextView
-        android:id="@+id/tv_ldgb"
-        android:layout_width="wrap_content"
         app:layout_constraintStart_toStartOf="@+id/iv_ldgb_bg"
-        app:layout_constraintEnd_toEndOf="@+id/iv_ldgb_bg"
-        app:layout_constraintTop_toBottomOf="@+id/iv_ldgb"
-        android:text="领导干部"
-        android:textColor="@color/white"
-        android:textSize="@dimen/sp_22"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_ldgb_bg"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintTop_toTopOf="@+id/iv_ldgb_bg" />
 
     <ImageView
         android:id="@+id/iv_hbgb_bg"
         android:layout_width="@dimen/dp_280"
         android:layout_height="@dimen/dp_180"
-        app:layout_constraintStart_toStartOf="@+id/view_center"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="@dimen/dp_100"
-        android:layout_marginTop="@dimen/dp_100"
-        android:background="@mipmap/ic_yjjc_swcw_bg"/>
+        android:layout_marginTop="@dimen/dp_50"
+        android:background="@mipmap/ic_yjjc_swcw_bg"
+        app:layout_constraintStart_toStartOf="@+id/view_center"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/iv_hbgb"
         android:layout_width="@dimen/dp_80"
+        android:layout_height="@dimen/dp_80"
         android:src="@mipmap/ic_gb_hbgb"
         app:layout_constraintBottom_toTopOf="@+id/tv_hbgb"
-        app:layout_constraintStart_toStartOf="@+id/iv_hbgb_bg"
         app:layout_constraintEnd_toEndOf="@+id/iv_hbgb_bg"
-        app:layout_constraintTop_toTopOf="@+id/iv_hbgb_bg"
-        android:layout_height="@dimen/dp_80"/>
-
-    <TextView
-        android:id="@+id/tv_hbgb"
-        android:layout_width="wrap_content"
         app:layout_constraintStart_toStartOf="@+id/iv_hbgb_bg"
-        app:layout_constraintEnd_toEndOf="@+id/iv_hbgb_bg"
-        app:layout_constraintTop_toBottomOf="@+id/iv_hbgb"
-        android:text="后备干部"
-        android:textColor="@color/white"
-        android:textSize="@dimen/sp_22"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_hbgb_bg"
-        android:layout_height="wrap_content"/>
-
-
+        app:layout_constraintTop_toTopOf="@+id/iv_hbgb_bg" />
 
     <ImageView
         android:id="@+id/iv_zjgwy_bg"
         android:layout_width="@dimen/dp_280"
         android:layout_height="@dimen/dp_180"
-        app:layout_constraintEnd_toEndOf="@+id/view_center"
-        app:layout_constraintTop_toBottomOf="@+id/iv_ldgb_bg"
+        android:layout_marginTop="@dimen/dp_50"
         android:layout_marginEnd="@dimen/dp_100"
-        android:layout_marginTop="@dimen/dp_100"
-        android:background="@mipmap/ic_yjjc_sjzt_bg"/>
-
+        android:background="@mipmap/ic_yjjc_sjzt_bg"
+        app:layout_constraintEnd_toEndOf="@+id/view_center"
+        app:layout_constraintTop_toBottomOf="@+id/iv_ldgb_bg" />
 
     <ImageView
         android:id="@+id/iv_zjgwy"
         android:layout_width="@dimen/dp_80"
+        android:layout_height="@dimen/dp_80"
         android:src="@mipmap/ic_gb_zjgwy"
         app:layout_constraintBottom_toTopOf="@+id/tv_zjgwy"
-        app:layout_constraintStart_toStartOf="@+id/iv_zjgwy_bg"
         app:layout_constraintEnd_toEndOf="@+id/iv_zjgwy_bg"
-        app:layout_constraintTop_toTopOf="@+id/iv_zjgwy_bg"
-        android:layout_height="@dimen/dp_80"/>
-
-        <TextView
-            android:id="@+id/tv_zjgwy"
-            android:layout_width="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/iv_zjgwy_bg"
-            app:layout_constraintEnd_toEndOf="@+id/iv_zjgwy_bg"
-            app:layout_constraintTop_toBottomOf="@+id/iv_zjgwy"
-            android:text="职级公务员"
-            android:textColor="@color/white"
-            android:textSize="@dimen/sp_22"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_zjgwy_bg"
-            android:layout_height="wrap_content"/>
+        app:layout_constraintStart_toStartOf="@+id/iv_zjgwy_bg"
+        app:layout_constraintTop_toTopOf="@+id/iv_zjgwy_bg" />
 
     <ImageView
         android:id="@+id/iv_sygb_bg"
         android:layout_width="@dimen/dp_280"
         android:layout_height="@dimen/dp_180"
-        app:layout_constraintStart_toStartOf="@id/view_center"
         android:layout_marginStart="@dimen/dp_100"
-        app:layout_constraintTop_toBottomOf="@+id/iv_hbgb_bg"
-        android:layout_marginTop="@dimen/dp_100"
-        android:background="@mipmap/ic_yjjc_sjzt_bg"/>
+        android:layout_marginTop="@dimen/dp_50"
+        android:background="@mipmap/ic_yjjc_sjzt_bg"
+        app:layout_constraintStart_toStartOf="@id/view_center"
+        app:layout_constraintTop_toBottomOf="@+id/iv_hbgb_bg" />
 
+    <View
+        android:id="@+id/view_sygb"
+        android:layout_width="@dimen/dp_80"
+        android:layout_height="@dimen/dp_80"
+        app:layout_constraintStart_toStartOf="@+id/iv_sygb"
+        app:layout_constraintEnd_toEndOf="@+id/iv_sygb"
+        app:layout_constraintTop_toTopOf="@+id/iv_sygb"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_sygb"
+        android:background="@drawable/shape_white33_r5"/>
 
     <ImageView
         android:id="@+id/iv_sygb"
-        android:layout_width="@dimen/dp_80"
+        android:layout_width="@dimen/dp_60"
+        android:layout_height="@dimen/dp_60"
         android:src="@mipmap/ic_gb_sygb"
         app:layout_constraintBottom_toTopOf="@+id/tv_sygb"
-        app:layout_constraintStart_toStartOf="@+id/iv_sygb_bg"
         app:layout_constraintEnd_toEndOf="@+id/iv_sygb_bg"
-        app:layout_constraintTop_toTopOf="@+id/iv_sygb_bg"
-        android:layout_height="@dimen/dp_80"/>
+        app:layout_constraintStart_toStartOf="@+id/iv_sygb_bg"
+        app:layout_constraintTop_toTopOf="@+id/iv_sygb_bg" />
+
+
+    <TextView
+        android:id="@+id/tv_ldgb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="领导干部"
+        android:textColor="@color/white"
+        android:textSize="@dimen/sp_22"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_ldgb_bg"
+        app:layout_constraintEnd_toEndOf="@+id/iv_ldgb_bg"
+        app:layout_constraintStart_toStartOf="@+id/iv_ldgb_bg"
+        app:layout_constraintTop_toBottomOf="@+id/iv_ldgb" />
+
+    <TextView
+        android:id="@+id/tv_hbgb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="后备干部"
+        android:textColor="@color/white"
+        android:textSize="@dimen/sp_22"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_hbgb_bg"
+        app:layout_constraintEnd_toEndOf="@+id/iv_hbgb_bg"
+        app:layout_constraintStart_toStartOf="@+id/iv_hbgb_bg"
+        app:layout_constraintTop_toBottomOf="@+id/iv_hbgb" />
+
+    <TextView
+        android:id="@+id/tv_zjgwy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="职级公务员"
+        android:textColor="@color/white"
+        android:textSize="@dimen/sp_22"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_zjgwy_bg"
+        app:layout_constraintEnd_toEndOf="@+id/iv_zjgwy_bg"
+        app:layout_constraintStart_toStartOf="@+id/iv_zjgwy_bg"
+        app:layout_constraintTop_toBottomOf="@+id/iv_zjgwy" />
+
 
     <TextView
         android:id="@+id/tv_sygb"
         android:layout_width="wrap_content"
-        app:layout_constraintStart_toStartOf="@+id/iv_sygb_bg"
-        app:layout_constraintEnd_toEndOf="@+id/iv_sygb_bg"
-        app:layout_constraintTop_toBottomOf="@+id/iv_sygb"
+        android:layout_height="wrap_content"
         android:text="事业干部"
         android:textColor="@color/white"
         android:textSize="@dimen/sp_22"
         app:layout_constraintBottom_toBottomOf="@+id/iv_sygb_bg"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintEnd_toEndOf="@+id/iv_sygb_bg"
+        app:layout_constraintStart_toStartOf="@+id/iv_sygb_bg"
+        app:layout_constraintTop_toBottomOf="@+id/view_sygb" />
+
+    <View
+        android:id="@+id/view_center"
+        android:layout_width="@dimen/dp_1"
+        android:layout_height="@dimen/dp_1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
