--- a/Cadres/app/src/main/res/values/colors.xml
+++ b/Cadres/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="color_window_background">#f7f7f7</color>
     <color name="color_text">#323232</color>
     <color name="white">#ffffff</color>
+    <color name="white_33">#33ffffff</color>
     <color name="line_color_d8">#f8f8f8</color>
     <color name="color_4b_66">#664b4b4b</color>
     <color name="color_c3392d">#c3392d</color>
