--- a/Cadres/app/src/main/res/layout/item_gb_list_right.xml
+++ b/Cadres/app/src/main/res/layout/item_gb_list_right.xml
@@ -16,7 +16,7 @@
 
     <TextView
         android:id="@+id/tv_xrzsj"
-        android:layout_width="@dimen/dp_70"
+        android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
         android:textSize="@dimen/sp_12"
         android:gravity="center"
@@ -29,7 +29,7 @@
 
     <TextView
         android:id="@+id/tv_xrzwcc"
-        android:layout_width="@dimen/dp_70"
+        android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
         android:textSize="@dimen/sp_12"
         android:gravity="center"
@@ -42,7 +42,7 @@
 
     <TextView
         android:id="@+id/tv_xrzwccsj"
-        android:layout_width="@dimen/dp_70"
+        android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
         android:textSize="@dimen/sp_12"
         android:paddingStart="@dimen/dp_5"
@@ -55,7 +55,7 @@
 
     <TextView
         android:id="@+id/tv_zwjb"
-        android:layout_width="@dimen/dp_70"
+        android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
         android:textSize="@dimen/sp_12"
         android:gravity="center"
@@ -64,30 +64,57 @@
         app:layout_constraintStart_toEndOf="@+id/tv_xrzwccsj"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
-        tools:text="职务级别"/>
+        tools:text="现任职级"/>
 
     <TextView
         android:id="@+id/tv_rzjsj"
-        android:layout_width="@dimen/dp_70"
+        android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
         android:textSize="@dimen/sp_12"
         android:gravity="center"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_zwjb"
-        app:layout_constraintTop_toTopOf="@+id/view_title"
+        app:layout_constraintTop_toTopOf ="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
-        tools:text="任职级时间"/>
+        tools:text="任现职级\n时间"/>
 
     <TextView
-        android:id="@+id/tv_sex"
-        android:layout_width="@dimen/dp_40"
+        android:id="@+id/tv_rzjqssj"
+        android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
         android:textSize="@dimen/sp_12"
         android:gravity="center"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_rzjsj"
+        app:layout_constraintTop_toTopOf ="@+id/view_title"
+        app:layout_constraintBottom_toBottomOf="@+id/view_title"
+        tools:text="任现职级\n起算时间"/>
+
+    <TextView
+        android:id="@+id/tv_cjgzsj"
+        android:layout_width="@dimen/dp_80"
+        android:layout_height="0dp"
+        android:textSize="@dimen/sp_12"
+        android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
+        app:layout_constraintStart_toEndOf="@+id/tv_rzjqssj"
+        app:layout_constraintTop_toTopOf ="@+id/view_title"
+        app:layout_constraintBottom_toBottomOf="@+id/view_title"
+        tools:text="参加工作\n时间"/>
+
+
+    <TextView
+        android:id="@+id/tv_sex"
+        android:layout_width="@dimen/dp_50"
+        android:layout_height="0dp"
+        android:textSize="@dimen/sp_12"
+        android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
+        app:layout_constraintStart_toEndOf="@+id/tv_cjgzsj  "
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         tools:text="性别"/>
@@ -107,7 +134,7 @@
 
     <TextView
         android:id="@+id/tv_csny"
-        android:layout_width="@dimen/dp_70"
+        android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
         android:textSize="@dimen/sp_12"
         android:gravity="center"
@@ -159,42 +186,39 @@
 
     <TextView
         android:id="@+id/tv_zzzy"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/dp_120"
         android:layout_height="0dp"
         android:textSize="@dimen/sp_12"
         android:gravity="center"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_zzwhcd"
-        app:layout_constraintEnd_toStartOf="@+id/tv_poxm"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         tools:text="在职专业"/>
 
     <TextView
         android:id="@+id/tv_poxm"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/dp_120"
         android:layout_height="0dp"
         android:textSize="@dimen/sp_12"
         android:gravity="center"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_zzzy"
-        app:layout_constraintEnd_toStartOf="@+id/tv_pogzdw"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         tools:text="配偶姓名"/>
 
     <TextView
         android:id="@+id/tv_pogzdw"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/dp_120"
         android:layout_height="0dp"
         android:textSize="@dimen/sp_12"
         android:gravity="center"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_poxm"
-        app:layout_constraintEnd_toEndOf="@+id/view_title"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         tools:text="配偶工作单位\n及职务"/>
