--- a/Cadres/app/src/main/res/layout/activity_search.xml
+++ b/Cadres/app/src/main/res/layout/activity_search.xml
@@ -103,13 +103,36 @@
 <!--                app:layout_constraintTop_toBottomOf="@+id/fl_history" />-->
 
             <TextView
+                android:id="@+id/tv_dialog"
+                android:layout_width="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:text="市人大常委"
+                android:minWidth="@dimen/dp_120"
+                android:drawableRight="@mipmap/ic_down3"
+                android:drawablePadding="@dimen/dp_10"
+                android:textSize="@dimen/sp_20"
+                android:layout_height="wrap_content"/>
+
+            <View
+                android:id="@+id/iv_dialog_bg"
+                app:layout_constraintEnd_toEndOf="@+id/tv_dialog"
+                app:layout_constraintStart_toStartOf="@+id/tv_dialog"
+                android:background="@color/color_ff6569"
+                app:layout_constraintTop_toBottomOf="@+id/tv_dialog"
+                android:layout_width="0dp"
+                android:layout_marginTop="@dimen/dp_5"
+                android:layout_height="@dimen/dp_8"/>
+
+            <TextView
                 android:id="@+id/tv_lx"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_20"
                 android:paddingTop="@dimen/dp_5"
                 app:layout_constraintStart_toStartOf="@+id/guideline_start_30"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/iv_dialog_bg"
                 android:text="类型："/>
 
             <com.example.cadres.widget.flowlayout.TagFlowLayout
@@ -124,13 +147,34 @@
                 app:max_select="-1"/>
 
             <TextView
-                android:id="@+id/tv_gllb"
+                android:id="@+id/tv_rylb"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_20"
                 android:paddingTop="@dimen/dp_5"
                 app:layout_constraintStart_toStartOf="@+id/guideline_start_30"
                 app:layout_constraintTop_toBottomOf="@+id/fl_lx"
+                android:text="人员类别："/>
+
+            <com.example.cadres.widget.flowlayout.TagFlowLayout
+                android:id="@+id/fl_rylb"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                tools:layout_height="@dimen/dp_30"
+                tools:background="@color/color_b31f23"
+                app:layout_constraintStart_toStartOf="@+id/guideline_start_180"
+                app:layout_constraintEnd_toEndOf="@+id/guideline_end"
+                app:layout_constraintTop_toTopOf="@+id/tv_rylb"
+                app:max_select="-1"/>
+
+            <TextView
+                android:id="@+id/tv_gllb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_20"
+                android:paddingTop="@dimen/dp_5"
+                app:layout_constraintStart_toStartOf="@+id/guideline_start_30"
+                app:layout_constraintTop_toBottomOf="@+id/fl_rylb"
                 android:text="管理类别："/>
             
             <com.example.cadres.widget.flowlayout.TagFlowLayout
@@ -410,13 +454,34 @@
                 app:max_select="-1"/>
 
             <TextView
-                android:id="@+id/tv_gzjl"
+                android:id="@+id/tv_rybq"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_20"
                 android:paddingTop="@dimen/dp_5"
                 app:layout_constraintStart_toStartOf="@+id/guideline_start_30"
                 app:layout_constraintTop_toBottomOf="@+id/fl_xxlx"
+                android:text="人员标签："/>
+
+            <com.example.cadres.widget.flowlayout.TagFlowLayout
+                android:id="@+id/fl_rybq"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                tools:layout_height="@dimen/dp_30"
+                tools:background="@color/color_b31f23"
+                app:layout_constraintStart_toStartOf="@+id/guideline_start_180"
+                app:layout_constraintEnd_toEndOf="@+id/guideline_end"
+                app:layout_constraintTop_toTopOf="@+id/tv_rybq"
+                app:max_select="-1"/>
+
+            <TextView
+                android:id="@+id/tv_gzjl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_20"
+                android:paddingTop="@dimen/dp_5"
+                app:layout_constraintStart_toStartOf="@+id/guideline_start_30"
+                app:layout_constraintTop_toBottomOf="@+id/fl_rybq"
                 android:text="工作经历："/>
 
             <com.example.cadres.widget.flowlayout.TagFlowLayout
